# COZIpy

./: .gitignore  CHANGELOG.md  README.md  env.yml  pyproject.toml
.github/workflows/: python-publish.yml
cozipy/: nep_cozi.py
src/cozipy/: __init__.py  neighbors.py  nep_cozi.py
tests/: tests_cozi.py
tutorial/: cozipy_tutorial.ipynb
tutorial/script/: cozipy_tutorial.ipynb
